# nano

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ios-simulator.yml  windows.yml
app/standalone/: CMakeLists.txt  main.cpp
app/standalone/unix/: main.cpp
app/standalone/windows/: main.cpp
nano/: CMakeLists.txt
nano/include/: nano.h
nano/include/nano/: nano.h
nano/include/nano/Core/: Application.h  BaseDefines.h
nano/src/: nano.cpp
nano/src/Core/: Application.cpp  Log.cpp
nano/src/Graphics/D3D12/: GraphicsCore.cpp  GraphicsCore.h  GraphicsUtils.h
nano/src/Graphics/Noop/: GraphicsCore.cpp
nano/src/nano/: nano.cpp
nano/src/nano/Core/: Application.cpp  Log.cpp  Log.h
nano/src/nano/Graphics/: GraphicsCore.h
nano/src/nano/Graphics/D3D12/: GraphicsCore.cpp  GraphicsCore.h  GraphicsUtils.h
nano/src/nano/Graphics/Noop/: GraphicsCore.cpp
